force-app/main/default/objects/ampi__Geographical_Area__c/ampi__Geographical_Area__c.object-meta.xml
<CustomObject>
    <description>Geographic areas of operation</description>
    <label>Geographic Area</label>
    <nameField>
        <label>Geographic Area</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographic Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>