force-app/main/default/objects/ampi__Geographical_Area__c/fields/Additional_Address__c.field-meta.xml
<CustomField>
    <fullName>Additional_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Address</label>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>P&amp;PUs (Additional Address)</relationshipLabel>
    <relationshipName>P_PUs</relationshipName>
    <type>Lookup</type>
</CustomField>