force-app/main/default/objects/ampi__Geographical_Area__c/fields/Additional_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Name__c</fullName>
    <label>Additional Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>