force-app/main/default/objects/ampi__Geographical_Area__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>P&amp;PUs</relationshipLabel>
    <relationshipName>P_PUs1</relationshipName>
    <type>Lookup</type>
</CustomField>