force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Exclude_From_IATI__c.field-meta.xml
<CustomField>
    <fullName>ampi__Exclude_From_IATI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate if this geographic area should be excluded from IATI. If TRUE, then this Geographic Area and all child records (e.g. Project Geographic Area) are not printed into the IATI Activity and Organization XMLs.</description>
    <inlineHelpText>Check this box if this geographic area should be excluded from IATI</inlineHelpText>
    <label>Exclude from IATI</label>
    <type>Checkbox</type>
</CustomField>