force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>ampi__Geolocation__c</fullName>
    <description>Geolocation field to store the longitude and latitude of a geographic area.</description>
    <inlineHelpText>Enter the geolocation of the Geographic Area</inlineHelpText>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>