force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__IATI_Region__c.field-meta.xml
<CustomField>
    <fullName>ampi__IATI_Region__c</fullName>
    <description>Picklist to specify the IATI defined region.</description>
    <inlineHelpText>Specify the region here</inlineHelpText>
    <label>IATI Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>States Ex-Yugoslavia unspecified</fullName>
            </value>
            <value>
                <fullName>Europe, regional</fullName>
            </value>
            <value>
                <fullName>North of Sahara, regional</fullName>
            </value>
            <value>
                <fullName>South of Sahara, regional</fullName>
            </value>
            <value>
                <fullName>Africa, regional</fullName>
            </value>
            <value>
                <fullName>West Indies, regional</fullName>
            </value>
            <value>
                <fullName>North &amp; Central America, regional</fullName>
            </value>
            <value>
                <fullName>South America, regional</fullName>
            </value>
            <value>
                <fullName>America, regional</fullName>
            </value>
            <value>
                <fullName>Middle East, regional</fullName>
            </value>
            <value>
                <fullName>Central Asia, regional</fullName>
            </value>
            <value>
                <fullName>South Asia, regional</fullName>
            </value>
            <value>
                <fullName>South &amp; Central Asia, regional</fullName>
            </value>
            <value>
                <fullName>Far East Asia, regional</fullName>
            </value>
            <value>
                <fullName>Asia, regional</fullName>
            </value>
            <value>
                <fullName>Oceania, regional</fullName>
            </value>
            <value>
                <fullName>Developing countries, unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>