force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Internal_Code__c.field-meta.xml
<CustomField>
    <fullName>ampi__Internal_Code__c</fullName>
    <description>Text field to store the internally used code of the Geographic Area for reporting.</description>
    <label>Internal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>