force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Name_Translated__c.field-meta.xml
<CustomField>
    <fullName>ampi__Name_Translated__c</fullName>
    <description>Formula field to return a translated version of Name if user is using Salesforce in a different language. Depending on user’s language locale, can return Name, Name_Language_1__c, Name_Language_2__c, or Name_Language_3__c. Displayed in ManageIndicators, SetTargets, and AddResults.</description>
    <formula>CASE($Label.ampi__USER_LANGUAGE_CODE,
    &apos;1&apos;, BLANKVALUE(ampi__Name_Language_1__c, Name),
    &apos;2&apos;, BLANKVALUE(ampi__Name_Language_2__c, Name),
    &apos;3&apos;, BLANKVALUE(ampi__Name_Language_3__c, Name),
    Name
)</formula>
    <label>Geographic Area Translated</label>
    <type>Text</type>
</CustomField>