force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Parent_Geographical_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Parent_Geographical_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to relate a geographic area to its parent and create a hierarchy of geographic areas.</description>
    <label>Parent Geographic Area</label>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Child Geographic Areas</relationshipLabel>
    <relationshipName>Related_Geographical_Area</relationshipName>
    <type>Lookup</type>
</CustomField>