force-app/main/default/objects/ampi__Geographical_Area__c/fields/ampi__Type__c.field-meta.xml
<CustomField>
    <fullName>ampi__Type__c</fullName>
    <description>Picklist to specify the type of geographic area (Country/ State etc.)</description>
    <inlineHelpText>System defined. Amp Impact Indicator page (for adding a new indicator) looks at this field specifically in order to enable the behaviour of the custom page.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Programme</fullName>
            </value>
            <value>
                <fullName>Programme Unit</fullName>
            </value>
            <value>
                <fullName>National Management Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>