force-app/main/default/objects/ampi__Geographical_Area__c/fields/ChildrensVillageNumber__c.field-meta.xml
<CustomField>
    <fullName>ChildrensVillageNumber__c</fullName>
    <inlineHelpText>Derived from LUCY: Children&apos;s Village Number</inlineHelpText>
    <label>Children&apos;s Village Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>