force-app/main/default/objects/ampi__Geographical_Area__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>Derived from LUCY Data: Region Code (3 digits), Country Code (2 Characters), Programme Code (10 digits), Programme Unit Code (R-code)</inlineHelpText>
    <label>Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>