force-app/main/default/objects/ampi__Geographical_Area__c/fields/Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Code_Number__c</fullName>
    <formula>IF(ISNUMBER(SUBSTITUTE(Code__c, &apos;R&apos;, &apos;&apos;  )), VALUE(SUBSTITUTE(Code__c, &apos;R&apos;, &apos;&apos;  )), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>