force-app/main/default/objects/ampi__Geographical_Area__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>Oceania</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>To be defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>