force-app/main/default/objects/ampi__Geographical_Area__c/fields/Corresponding_address_different__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_address_different__c</fullName>
    <label>Correspondance address different</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>