force-app/main/default/objects/ampi__Geographical_Area__c/fields/DAC_SOS_Codes__c.field-meta.xml
<CustomField>
    <fullName>DAC_SOS_Codes__c</fullName>
    <label>DAC / SOS Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAC-11110</fullName>
            </value>
            <value>
                <fullName>DAC-11120</fullName>
            </value>
            <value>
                <fullName>DAC-11130</fullName>
            </value>
            <value>
                <fullName>DAC-11182</fullName>
            </value>
            <value>
                <fullName>DAC-112</fullName>
            </value>
            <value>
                <fullName>DAC-11220</fullName>
            </value>
            <value>
                <fullName>DAC-11230</fullName>
            </value>
            <value>
                <fullName>DAC-11240</fullName>
            </value>
            <value>
                <fullName>DAC-11320</fullName>
            </value>
            <value>
                <fullName>DAC-11330</fullName>
            </value>
            <value>
                <fullName>DAC-114</fullName>
            </value>
            <value>
                <fullName>DAC-11420</fullName>
            </value>
            <value>
                <fullName>DAC-11430</fullName>
            </value>
            <value>
                <fullName>DAC-121</fullName>
            </value>
            <value>
                <fullName>DAC-12110</fullName>
            </value>
            <value>
                <fullName>DAC-12181</fullName>
            </value>
            <value>
                <fullName>DAC-12182</fullName>
            </value>
            <value>
                <fullName>DAC-12191</fullName>
            </value>
            <value>
                <fullName>DAC-12220</fullName>
            </value>
            <value>
                <fullName>DAC-12230</fullName>
            </value>
            <value>
                <fullName>DAC-12240</fullName>
            </value>
            <value>
                <fullName>DAC-12250</fullName>
            </value>
            <value>
                <fullName>DAC-12261</fullName>
            </value>
            <value>
                <fullName>DAC-12262</fullName>
            </value>
            <value>
                <fullName>DAC-12263</fullName>
            </value>
            <value>
                <fullName>DAC-12281</fullName>
            </value>
            <value>
                <fullName>DAC-130</fullName>
            </value>
            <value>
                <fullName>DAC-13010</fullName>
            </value>
            <value>
                <fullName>DAC-13020</fullName>
            </value>
            <value>
                <fullName>DAC-13030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>