force-app/main/default/objects/ampi__Geographical_Area__c/fields/Date_Founded__c.field-meta.xml
<CustomField>
    <fullName>Date_Founded__c</fullName>
    <inlineHelpText>Start date is mandatory for Programmes</inlineHelpText>
    <label>Operation Start Date</label>
    <type>Date</type>
</CustomField>