force-app/main/default/objects/ampi__Geographical_Area__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <label>Definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>