force-app/main/default/objects/ampi__Geographical_Area__c/fields/Extent_Information__c.field-meta.xml
<CustomField>
    <fullName>Extent_Information__c</fullName>
    <label>Extent Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>