force-app/main/default/objects/ampi__Geographical_Area__c/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS coordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>