force-app/main/default/objects/ampi__Geographical_Area__c/fields/International_Sponsorship_Status__c.field-meta.xml
<CustomField>
    <fullName>International_Sponsorship_Status__c</fullName>
    <label>International Sponsorship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close to stop</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Sustainable Path - Maintain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>