force-app/main/default/objects/ampi__Geographical_Area__c/fields/ISP_Available__c.field-meta.xml
<CustomField>
    <fullName>ISP_Available__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>is in international sponsorship programme (ISP)</description>
    <inlineHelpText>International Sponsorship Available</inlineHelpText>
    <label>Programme ISP Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Temporarily closed for international sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>