force-app/main/default/objects/ampi__Geographical_Area__c/fields/Location_PSA__c.field-meta.xml
<CustomField>
    <fullName>Location_PSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location PSA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>SOS Organisation - MA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>P&amp;PUs (Location PSA)</relationshipLabel>
    <relationshipName>P_PUs</relationshipName>
    <type>Lookup</type>
</CustomField>