force-app/main/default/objects/ampi__Geographical_Area__c/fields/Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Name__c</fullName>
    <inlineHelpText>Programme Unit Type (written in words) + Programme/Location</inlineHelpText>
    <label>Long Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>