force-app/main/default/objects/ampi__Geographical_Area__c/fields/Main_Programme_Unit__c.field-meta.xml
<CustomField>
    <fullName>Main_Programme_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Programme Unit?</label>
    <type>Checkbox</type>
</CustomField>