force-app/main/default/objects/ampi__Geographical_Area__c/fields/Matching_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Matching_Code_Name__c</fullName>
    <label>Matching Code &amp; Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included in international sponsorship programme</fullName>
            </value>
            <value>
                <fullName>0 - Not included in sponsorship programme</fullName>
            </value>
            <value>
                <fullName>10 - Is in international sponsorship programme</fullName>
            </value>
            <value>
                <fullName>11 - Is in international sponsorship programme – only existing child sponsorships</fullName>
            </value>
            <value>
                <fullName>12 - Is not in international sponsorship programme</fullName>
            </value>
            <value>
                <fullName>20 - Sponsorships on request only</fullName>
            </value>
            <value>
                <fullName>30 - No international sponsorships</fullName>
            </value>
            <value>
                <fullName>40 - Reserved for norway</fullName>
            </value>
            <value>
                <fullName>41 - Reserved for norway/austria</fullName>
            </value>
            <value>
                <fullName>42 - Reserved for e.v.</fullName>
            </value>
            <value>
                <fullName>43 - Reserved for sweden</fullName>
            </value>
            <value>
                <fullName>44 - Reserved for luxemburg</fullName>
            </value>
            <value>
                <fullName>45 - Reserved for hgfd</fullName>
            </value>
            <value>
                <fullName>46 - Reserved for switzerland</fullName>
            </value>
            <value>
                <fullName>47 - Reserved for norway/switzerland</fullName>
            </value>
            <value>
                <fullName>48 - Reserved for norway/sweden</fullName>
            </value>
            <value>
                <fullName>49 - Reserved for norway/denmark</fullName>
            </value>
            <value>
                <fullName>50 - Temporarily closed down</fullName>
            </value>
            <value>
                <fullName>51 - Reserved for denmark</fullName>
            </value>
            <value>
                <fullName>52 - Reserved for netherlands</fullName>
            </value>
            <value>
                <fullName>53 - Reserved for fifa</fullName>
            </value>
            <value>
                <fullName>54 - Reserved for switzerland/denmark</fullName>
            </value>
            <value>
                <fullName>55 - Reserved for belgium</fullName>
            </value>
            <value>
                <fullName>56 - Reserved for canada</fullName>
            </value>
            <value>
                <fullName>60 - No new sponsorships, status unclear</fullName>
            </value>
            <value>
                <fullName>70 - Segregated/closed down</fullName>
            </value>
            <value>
                <fullName>80 - Waiting for release</fullName>
            </value>
            <value>
                <fullName>90 - Special case tibet</fullName>
            </value>
            <value>
                <fullName>99 - Part of sponsored sos programme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>