force-app/main/default/objects/ampi__Geographical_Area__c/fields/MFPlus_OE_ID__c.field-meta.xml
<CustomField>
    <fullName>MFPlus_OE_ID__c</fullName>
    <label>MFPlus OE-ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>