force-app/main/default/objects/ampi__Geographical_Area__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5-Programme Idea approved</fullName>
            </value>
            <value>
                <fullName>10-Feasibility study summary available</fullName>
            </value>
            <value>
                <fullName>20-Programme concept approved</fullName>
            </value>
            <value>
                <fullName>30-Programme proposal approved</fullName>
            </value>
            <value>
                <fullName>200-Start of construction</fullName>
            </value>
            <value>
                <fullName>310-End of construction</fullName>
            </value>
            <value>
                <fullName>320-Audit completed</fullName>
            </value>
            <value>
                <fullName>350-Start of Set-up</fullName>
            </value>
            <value>
                <fullName>510-Inauguration</fullName>
            </value>
            <value>
                <fullName>910-Start running costs</fullName>
            </value>
            <value>
                <fullName>915-Start of operation</fullName>
            </value>
            <value>
                <fullName>920-End of running costs</fullName>
            </value>
            <value>
                <fullName>925-End of operation</fullName>
            </value>
            <value>
                <fullName>960-End of SOS involvement</fullName>
            </value>
            <value>
                <fullName>990-Created by mistake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>