force-app/main/default/objects/ampi__Geographical_Area__c/fields/Official_Opening__c.field-meta.xml
<CustomField>
    <fullName>Official_Opening__c</fullName>
    <label>Official Opening</label>
    <length>255</length>
    <type>Text</type>
</CustomField>