force-app/main/default/objects/ampi__Geographical_Area__c/fields/Operation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Operation_End_Date__c</fullName>
    <inlineHelpText>End date is mandatory for Programmes</inlineHelpText>
    <label>Operation End Date</label>
    <type>Date</type>
</CustomField>