force-app/main/default/objects/ampi__Geographical_Area__c/fields/Parent_MA__c.field-meta.xml
<CustomField>
    <fullName>Parent_MA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent MA for Programmes</inlineHelpText>
    <label>Parent MA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>SOS Organisation - MA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programmes &amp; Programme Units</relationshipLabel>
    <relationshipName>Programmes</relationshipName>
    <type>Lookup</type>
</CustomField>