force-app/main/default/objects/ampi__Geographical_Area__c/fields/PGAs_Count__c.field-meta.xml
<CustomField>
    <fullName>PGAs_Count__c</fullName>
    <label>PGAs Count</label>
    <summaryForeignKey>ampi__Project_Geographic_Area__c.ampi__Geographic_Area__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>