force-app/main/default/objects/ampi__Geographical_Area__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <formula>CASE(
LEFT((RIGHT(TEXT( Program_Unit_Type__c ), 3)),1)
,
&quot;1&quot;, &quot;Alternative Care (AC)&quot;, &quot;2&quot;, &quot;Family Strengthening (FS)&quot;,
&quot;3&quot;,&quot;Education&quot;,
&quot;4&quot;, &quot;Health&quot;,
&quot;5&quot;, &quot;Other&quot;,
&quot;6&quot;, &quot;Other&quot;,
&quot;9&quot;, &quot;Non-Programmatic&quot;
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pillar</label>
    <type>Text</type>
</CustomField>