force-app/main/default/objects/ampi__Geographical_Area__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>The field is used to differentiate between the programmes that deliver services and programmes that are related to the national office</description>
    <label>Programme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Programme</fullName>
            </value>
            <value>
                <fullName>National Office Programme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>