force-app/main/default/objects/ampi__Geographical_Area__c/fields/Program_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Unit_Type__c</fullName>
    <label>Programme Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programme_Unit_Types</valueSetName>
    </valueSet>
</CustomField>