force-app/main/default/objects/ampi__Geographical_Area__c/fields/Programme_ID__c.field-meta.xml
<CustomField>
    <fullName>Programme_ID__c</fullName>
    <inlineHelpText>Derived from LUCY: Parent Programme ID</inlineHelpText>
    <label>Programme ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>