force-app/main/default/objects/ampi__Geographical_Area__c/fields/Programme_Risk_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Programme_Risk_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Risk Reviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>P&amp;PUs</relationshipLabel>
    <relationshipName>Programme_RR_PUs</relationshipName>
    <type>Lookup</type>
</CustomField>