force-app/main/default/objects/ampi__Geographical_Area__c/fields/region_code_registered__c.field-meta.xml
<CustomField>
    <fullName>region_code_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>region_code_registered</label>
    <type>Checkbox</type>
</CustomField>