force-app/main/default/objects/ampi__Geographical_Area__c/fields/Release_Int_Sponsorships__c.field-meta.xml
<CustomField>
    <fullName>Release_Int_Sponsorships__c</fullName>
    <label>Release Int. Sponsorships</label>
    <type>Date</type>
</CustomField>