force-app/main/default/objects/ampi__Geographical_Area__c/fields/Shows_Risk_Register__c.field-meta.xml
<CustomField>
    <fullName>Shows_Risk_Register__c</fullName>
    <formula>$Profile.Name = &apos;System Administrator&apos; ||  $User.Email == Programme_Risk_Reviewer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shows Risk Register</label>
    <type>Checkbox</type>
</CustomField>